# edgehog-zephyr-device

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  FILE_TRANSFER.md  Kconfig  README.md  REUSE.toml  skipfile.txt  west-ci-4.2.yml  west-ci-msv.yml  west-ci-reference.yml  west-ci.yml  west-e2e.yml  west.yml
.github/: dependabot.yml  install_interfaces.sh
.github/workflows/: build.yml  doc-build.yml  doc-check.yml  e2e-test.yaml  interface-generation.yml  orchestrator.yml  reuse-lint.yml  static.yml  test.yml
.reuse/: dep5
LICENSES/: MIT.txt
doc/: CMakeLists.txt  Makefile  edgehog-zephyr-device.doxyfile.in  edgehog-zephyr-device.extended.doxyfile.in  led.md  library.doxyfile.in  ota.md
doc/_doxygen/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-edgehog.css  doxygen-awesome-sidebar-only-darkmode-toggle.css  doxygen-awesome-sidebar-only.css  doxygen-awesome-zephyr.css  doxygen-awesome-zephyr.js  doxygen-awesome.css  footer.html  groups.dox  header.html
doc/architecture/: Led Feedback.md  OTA Updates.md
doc/features/: File Transfer.md
e2e/: CMakeLists.txt  Kconfig  README.md  VERSION.license  certificate.cmake  prj.conf  testcase.yaml
e2e/boards/: native_sim.conf  native_sim.overlay  qemu_x86.conf  qemu_x86.overlay
e2e/http_server_certs/: cert_config.cnf
e2e/http_server_data/: device_to_server_test_data.txt  loopback_upload.txt  server_to_device_test_data.txt
e2e/include/: device_handler.h  e2e_ca_certificates.h  runner.h  shell_handlers.h  shell_macros.h  utilities.h
e2e/pytest/: configuration.py  conftest.py  file_transfer.py  http_requests.py  http_server.py  pyproject.toml  requirements.txt  storage_usage.py  telemetry.py  test_e2e.py  test_utilities.py
e2e/src/: device_handler.c  main.c  runner.c  shell_handlers.c  utilities.c
include/edgehog_device/: battery_status.h  device.h  edgehog_device.h  file_transfer.h  ota_event.h  result.h  storage.h  telemetry.h  wifi_scan.h
lib/: CMakeLists.txt  Kconfig
lib/edgehog_device/: CMakeLists.txt  Kconfig  base_image.c  battery_status.c  command.c  device.c  edgehog_device.c  file_transfer.c  generated_interfaces.c  hardware_info.c  http.c  led.c  network_properties.c  nvs.c  os_info.c  ota.c  runtime_info.c  settings.c  storage_usage.c  system_info.c  system_status.c  system_time.c  telemetry.c  telemetry_entry.c  util.c  uuid.c  wifi_scan.c
lib/edgehog_device/file_transfer/: compression.c  core.c  decompression.c  download.c  filesystem.c  filesystem_utils.c  storage.c  stream.c  upload.c  utils.c
lib/edgehog_device/include/: base_image.h  command.h  edgehog_private.h  file_transfer_private.h  generated_interfaces.h  hardware_info.h  http.h  led.h  log.h  network_properties.h  nvs.h  os_info.h  ota.h  runtime_info.h  settings.h  storage_usage.h  system_info.h  system_status.h  system_time.h  telemetry_entry.h  telemetry_private.h  util.h  uuid.h  wifi_scan.h
lib/edgehog_device/include/file_transfer/: compression.h  core.h  decompression.h  download.h  filesystem.h  filesystem_utils.h  storage.h  stream.h  upload.h  utils.h
lib/edgehog_device/include/ztar/: core.h  pack.h  unpack.h
lib/edgehog_device/ztar/: core.c  pack.c  unpack.c
samples/edgehog_app/: CMakeLists.txt  Kconfig  README.md  README_NXP.md  prj-wifi.conf  prj-zephyr-msv.conf  prj.conf  sample.yaml  sysbuild.conf
samples/edgehog_app/boards/: esp_wrover_kit_esp32_procpu.conf  esp_wrover_kit_esp32_procpu.overlay  frdm_rw612.conf  frdm_rw612.overlay  mimxrt1060_evk_mimxrt1062_qspi_B.conf  mimxrt1060_evk_mimxrt1062_qspi_B.overlay  mimxrt1060_evkb.conf  mimxrt1060_evkb.overlay  mimxrt1064_evk.overlay  native_sim.conf  native_sim.overlay  stm32h573i_dk.conf  stm32h573i_dk.overlay
samples/edgehog_app/src/: eth.c  file_transfer.c  main.c  wifi.c
samples/edgehog_app/src/include/: ca_certificates.h  eth.h  file_transfer.h  wifi.h
samples/edgehog_app/sysbuild/: mcuboot.conf
samples/edgehog_app/sysbuild/boards/: esp_wrover_kit_esp32_procpu.overlay  mimxrt1060_evkb.overlay  mimxrt1064_evk.overlay  stm32h573i_dk.overlay
samples/simple/: CMakeLists.txt  Kconfig  README.md  VERSION  prj.conf  sample.yaml  sysbuild.cmake
samples/simple/boards/: esp_wrover_kit.conf  esp_wrover_kit.overlay  mimxrt1064_evk.cmake  mimxrt1064_evk.conf  mimxrt1064_evk.overlay  native_sim.conf  stm32h573i_dk.conf  stm32h573i_dk.overlay
samples/simple/include/: ca_certificates.h  tls-conf.h  wifi.h
samples/simple/src/: eth.c  main.c  wifi.c
samples/simple/src/include/: ca_certificates.h  wifi.h
samples/simple/sysbuild/: mcuboot.conf
scripts/: .pylintrc  clean.py  docs.py  format.py  private-west-commands.yml  requirements.txt  static.py  west-commands.yml
tests/lib/edgehog_device/integration/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/edgehog_device/integration/src/: main.c
tests/lib/edgehog_device/unit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/edgehog_device/unit/src/: main.c
zephyr/: module.yml
